--- a/src/app/features/about/about.component.html
+++ b/src/app/features/about/about.component.html
@@ -9,7 +9,7 @@
         <p>La idea es simple: hacer que la teoría sea más clara, que componer sea más accesible y que la música se sienta menos intimidante.</p>
       </div>
       <div class="story-image">
-        <img src="assets/images/about/profile.jpg" alt="Mi foto de perfil" class="profile-photo" />
+        <img src="assets/images/about/me.png" alt="Mi foto de perfil" class="profile-photo" />
       </div>
     </div>
     <div class="compositions">
